# pyr-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/audit-docs/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/docstring/: SKILL.md
.claude/skills/evaluate/: SKILL.md
.claude/skills/help-text/: SKILL.md
.claude/skills/performance/: SKILL.md
.claude/skills/release-docs/: SKILL.md
.claude/skills/type-hints/: SKILL.md
.claude/skills/typing/: SKILL.md
docs/: code_evaluation_rubric.md
pyrcli/: __about__.py
pyrcli/cli/: __init__.py  ansi.py  cli_program.py  env.py  ini.py  io.py  patterns.py  platform.py  render.py  reporters.py  terminal.py  text.py  text_program.py  types.py
pyrcli/cli/http/: __init__.py  client.py  json.py  responses.py  types.py  upload.py
pyrcli/cli/progress/: _base.py  _render.py  progress_bar.py  spinner.py  types.py
pyrcli/commands/: dupe.py  emit.py  glue.py  here.py  num.py  order.py  peek.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  track.py  when.py  where.py
tests/: test_ansi.py  test_env.py  test_ini.py  test_io.py  test_patterns.py  test_progress.py  test_render.py  test_terminal.py  test_text.py
tests/test_data/: valid-ini-file.ini
