[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyr-cli"
version = "1.4.13"
description = "A collection of deterministic Unix-style CLI tools and a shared Python framework with stable I/O contracts for pipeline-safe composition."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Roth Earl", email = "rothdearl@gmail.com" }]
keywords = ["cli", "coreutils", "framework", "toolkit", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "colorama",
    "python-dateutil",
    "requests",
]

[project.scripts]
dupe = "pyrcli.commands.dupe:main"
emit = "pyrcli.commands.emit:main"
glue = "pyrcli.commands.glue:main"
here = "pyrcli.commands.here:main"
num = "pyrcli.commands.num:main"
order = "pyrcli.commands.order:main"
peek = "pyrcli.commands.peek:main"
scan = "pyrcli.commands.scan:main"
seek = "pyrcli.commands.seek:main"
show = "pyrcli.commands.show:main"
slice = "pyrcli.commands.slice:main"
subs = "pyrcli.commands.subs:main"
tally = "pyrcli.commands.tally:main"
track = "pyrcli.commands.track:main"
when = "pyrcli.commands.when:main"

[project.urls]
Homepage = "https://github.com/rothdearl/pyr-cli"
Repository = "https://github.com/rothdearl/pyr-cli"
Issues = "https://github.com/rothdearl/pyr-cli/issues"

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrcli*"]
